--- a/src/views/partials/navbar.handlebars
+++ b/src/views/partials/navbar.handlebars
@@ -33,7 +33,12 @@
           <a class="dropdown-item" href="#">Calculadora</a>
         </div>
       </li>
-
+      <li class="nav-item">
+        <a class="nav-link" href="/info">Info server</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/infoEntorno">Info E.V.</a>
+      </li>
     </ul>
     <div class="d-flex flex-row">
       <p class="font-weight-bold h4">{{name}}</p>
