--- a/src/views/view/info-entorno.handlebars
+++ b/src/views/view/info-entorno.handlebars
@@ -4,4 +4,6 @@
   <h5>La persistencia de datos es: {{persistencia}}</h5>
   <h5>Uso de servicios externos: {{serviceExt}}</h5>
   <h5>Modo: {{modo}}</h5>
+
+  <button class="btn btn-success my-3" onclick="location.href ='/home'">A inicio</button>
 </div>
