--- a/src/views/view/info-server.handlebars
+++ b/src/views/view/info-server.handlebars
@@ -7,5 +7,5 @@
   <h5>Path de ejecucion: {{pathEjec}}</h5>
   <h5>Process ID: {{IdProceso}}</h5>
   <h5>Carpeta de proyecto: {{carpetaProy}}</h5>
-
+  <button class="btn btn-success my-3" onclick="location.href ='/home'">A inicio</button>
 </div>
