muestra de errores por hdb

--- a/src/views/view/server-error.handlebars
+++ b/src/views/view/server-error.handlebars
@@ -5,7 +5,7 @@
     <h3>{{error}}</h3>
     <button
       class="btn btn-warning my-5"
-      onclick="location.href='/home'"
+      onclick="location.href='/login'"
     >VOLVER</button>
   </div>
 </div>
