--- a/src/views/partials/navbar.handlebars
+++ b/src/views/partials/navbar.handlebars
@@ -39,6 +39,9 @@
       <li class="nav-item">
         <a class="nav-link" href="/infoEntorno">Info E.V.</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/chat">Chat</a>
+      </li>
     </ul>
     <div class="d-flex flex-row">
       <p class="font-weight-bold h4">{{name}}</p>
