mejora chat y registro

--- a/src/views/view/register.handlebars
+++ b/src/views/view/register.handlebars
@@ -25,7 +25,7 @@
           name="username"
           placeholder="email,ej: perez@gmail.com"
           class="form-control"
-          type="text"
+          type="email"
           required
         />
 
@@ -67,7 +67,7 @@
           name="age"
           placeholder="edad"
           class="form-control"
-          type="text"
+          type="number"
           required
         />
 
