--- a/src/views/view/chat.handlebars
+++ b/src/views/view/chat.handlebars
@@ -20,6 +20,7 @@
               type="text"
               id="emailRespond"
               placeholder="Responder a email..."
+              required
             />
             <textarea
               rows="3"
